--- a/estilos/style.css
+++ b/estilos/style.css
@@ -42,3 +42,20 @@ iframe{
     width: 266px;
     height: 471px;
 }
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.500);
+    box-sizing: border-box;    
+}
+section#redes-sociais img:hover{
+border: 2px solid rgb(255, 255, 255);
+transform: translate(-10px, -10px);
+box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.500);
+transition: transform .3s, border .3s;
+}
