--- a/estilos/style.css
+++ b/estilos/style.css
@@ -35,3 +35,20 @@ iframe#tela{
     width: 266px;
     height: 470px;
 }
+section#redes-sociais{
+    text-align: right;
+}
+section#redes-sociais img{
+    width: 50px;
+    height: 50px;
+    margin: 10px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.500);
+    box-sizing: border-box;
+}
+section#redes-sociais img:hover{
+    border: 3px solid white;
+    transform: translate(-3px , -3px);
+    box-shadow: 3px 3px 3px rgba(255, 255, 255, 0.999) ;
+    transition: transform .3s, border 1s;
+}
